# pypale

./: .coveragerc  .editorconfig  LICENSE  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug.md
docs/: CONTRIBUTING.md  README.md
pypale/: __init__.py  pypale.py
scripts/: format.sh  lint.sh  test.sh
tests/: conftest.py  factories.py  test_pypale.py  test_version.py
